--- a/index.css
+++ b/index.css
@@ -93,6 +93,35 @@ border-bottom-left-radius: 5px;
 padding-left: 15px;
 }
 
+.btn-primary{
+background-color: #FFFFFF ! important;
+border-color: #FFFFFF ! important;
+}
+
+.btn{
+padding: 0px 0px ! important;
+}
+
+.images img{
+padding-top: 20px;
+width: 100%;
+height: 40%;
+}
+
+.images .button {
+width: 100%;
+height: 40%;
+}
+
+.modal .modal-content img{
+width:80%; 
+height:80%;
+}
+
+.modal-content{
+width: 50% ! important;
+}
+
 @media (max-width: 900px) {
     .header h1 {
     padding-left: 0px;
